# polyglot_tax

./: README.md
jac/: jac.toml  main.jac
sota/: .gitignore  categorize.py  main.py  models.py  pyproject.toml  run.sh
sota/frontend/: vite.config.ts
sota/frontend/src/: App.tsx
