[project]
name = "mini-todo-sota"
version = "1.0.0"
description = "Minimal full-stack AI todo app (SOTA stack)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.4.0",
]
